# POS-RUST

./: .gitignore  README.md  start-mpesa-tunnel.ps1
pos-backend/: README.md  build.gradle.kts  gradle.properties  mvnw.cmd  pom.xml  settings.gradle.kts
pos-backend/src/main/java/com/pos/: Main.java  PosApplication.java
pos-backend/src/main/java/com/pos/config/: DataInitializer.java  WebConfig.java  WebSocketConfig.java
pos-backend/src/main/java/com/pos/controller/: AdminController.java  AnalyticsController.java  AuthController.java  BranchController.java  CustomerController.java  ExpenseController.java  MpesaController.java  ProductController.java  SaleController.java  ShiftController.java  SupplierController.java  SupportIssueController.java  SyncController.java
pos-backend/src/main/java/com/pos/dto/: CartItemDto.java  MpesaCheckoutRequest.java  MpesaCheckoutResponse.java  MpesaErrorResponse.java  MpesaStkCallbackDto.java  MpesaStkResponseDto.java
pos-backend/src/main/resources/: application.properties  application.properties.example
pos-backend/src/main/resources/static/: index.html
pos-backend/src/main/resources/static/js/: app.js
safi-backend/: pom.xml
safi-backend/src/main/java/com/pos/: SafiBackendApplication.java
safi-backend/src/main/resources/: application.properties
safi-terminal/: Cargo.toml
safi-terminal/src/: main.rs  receipt.rs  sync.rs
safi-terminal/src-tauri/: Cargo.toml  tauri.conf.json
safi-terminal/static/: index.html  manifest.json  sw.js
safi-terminal/static/js/: app.js  features.js
(+44 files in other folders)
